<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wifi</string>
    <string name="action_settings">Configurações</string>
    <string name="action_info">Sobre</string>
    <string name="wifiInfo">Wi-fi</string>
    <string name="wifiLists">Wifi Disponíveis</string>
    <string name="wifiSave">Wifi Conhecidos</string>
    <string name="wifiName">Nome:</string>
    <string name="wifiQuality">Qualidade:</string>
    <string name="wifiSituation">Situação:</string>
    <string name="wifiSpeed">Velocidade:</string>
    <string name="wifiSecurity">Segurança:</string>
    <string name="wifiAddress">Endereço:</string>
    <string name="wifiStrength">Qualidade:</string>
    <string name="title_activity_lists">Lista de Wifi disponíveis</string>
    <string name="title_activity_wifi_info">Conexão Atual</string>
    <string name="title_activity_list_save">Lista salva</string>
    <string name="title_activity_lists__save">Lista de Wifi conhecidos</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wifiSettingTime">Tempo para trocar de wi-fi: </string>
    <string name="wifiTimeHint">1</string>
    <string name="title_activity_info">Info</string>
    <string name="appInfo">Aplicativo desenvolvido por Alessandro Elias e Ruanito Diego Santos para a disciplina de Tópicos em Sistemas Operacionais, ministrada pelo professor Eduardo Todt.</string>
    <string name="title">Lista de wifi disponíveis:</string>
    <string name="KownWifis">Lista de wifi conhecidos:</string>
    <string name="textDiff">Diferença de qualidade para trocar de wifi:</string>
    <string name="buttonDiff">Salvar</string>
    <string name="wifidisabled">Wifi desabilidato!</string>
    <string name="btn_info_description">informação da conexão</string>
    <string name="img_text_empty"></string>

</resources>
