<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufpr.ci317final.WifiInfo" >

    <TextView
        android:id="@+id/wifiName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/wifiName"/>
    
    <TextView
        android:id="@+id/wifiNameResult"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/wifiName" />

    <TextView
        android:id="@+id/wifiSpeed"
        android:layout_below="@+id/wifiName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/wifiSpeed" />
    
    <TextView
        android:id="@+id/wifiSpeedResult"
        android:layout_below="@+id/wifiName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/wifiSpeed" />


    <TextView
        android:id="@+id/wifiAddress"
        android:layout_below="@+id/wifiSpeed"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/wifiAddress" />
    
    <TextView
        android:id="@+id/wifiAddressResult"
        android:layout_below="@+id/wifiSpeed"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/wifiAddress" />
    
    <TextView
        android:id="@+id/wifiStrength"
        android:layout_below="@+id/wifiAddress"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/wifiStrength" />
    
    <TextView
        android:id="@+id/wifiStrengthResult"
        android:layout_below="@+id/wifiAddress"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/wifiStrength" />

</RelativeLayout>
