<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufpr.ci317final.MainWifi" >

    <Button
        android:id="@+id/wifiInfo"
        android:layout_width="350sp"
        android:layout_height="250sp"
        android:text="@string/wifiInfo"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/hero_airport_wifi"
        android:onClick="wifiInfo" />
    
    <RelativeLayout
        android:id="@+id/wifiRelative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifiInfo"
        android:layout_centerHorizontal="true" >
        
        <Button
	        android:id="@+id/wifiLists"
	        android:layout_width="150sp"
	        android:layout_height="100sp"
	        android:text="@string/wifiLists"
	        android:onClick="wifiLists" />

	    <Button
	        android:id="@+id/wifiSave"
	        android:layout_width="150sp"
	        android:layout_height="100sp"
	        android:text="@string/wifiSave"
	        android:layout_toRightOf="@+id/wifiLists"
	        android:onClick="wifiListSave" />
    </RelativeLayout> 

</RelativeLayout>
